# crypto-listener

./: .gitignore  Cargo.toml  mailme
gemini/: api.txt
json/: README.md
json/src/: number.rs
src/: main.rs
src/bitfinex/: mod.rs
src/database/: influx.rs  mod.rs
src/errors/: mod.rs
src/gdax/: gdax_database.rs  mod.rs  types.rs
src/gemini/: mod.rs  responses.txt
src/influx/: mod.rs
src/threadpack/: mod.rs
src/wspack/: mod.rs
